--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,12 +18,8 @@ CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
-# Email Configuration (Nodemailer with Gmail)
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_app_password
-EMAIL_FROM=noreply@homeconnect.com
+# Email Configuration (Resend)
+RESEND_API_KEY=re_123456789
 
 # Frontend URL
 FRONTEND_URL=http://localhost:5173
